Fixed header causing horizontal overflow

--- a/views/header.css
+++ b/views/header.css
@@ -5,8 +5,6 @@
 
 header {
     background-color: #101010;
-    padding-left: 5%;
-    padding-right: 5%;
     margin-bottom: 5px;
     width: 100%;
     height: 50px;
